--- a/hobbies.html
+++ b/hobbies.html
@@ -1,4 +1,3 @@
-<?php include "inc/functions.php" ?>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,9 +11,46 @@
 </head>
 
 <body>
-    <?php
-    navbar();
-    ?>
+   <header>
+        <a class="logo" href="index.html">
+            <img src="img/portfolioLogo.png" alt="Logo">
+        </a>
+        <div class="navbarCenter">
+            <button class="active">
+                <a href="hobbies.html">Mijn Hobbies</a>
+            </button>
+            <button class="">
+                <a href="projects.html">Mijn Projecten</a>
+            </button>
+            <button class="">
+                <a href="knowledge.html">Mijn Vaardigheden</a>
+            </button>
+        </div>
+        <div class="navbarMobile">
+            <details class="navDetails">
+                <summary class="navSummary">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" class="dropdownIcon">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                    </svg>
+                </summary>
+                <div class="navButtons">
+                    <button class="">
+                        <a href="hobbies.html">Mijn Hobbies</a>
+                    </button>
+                    <button class="">
+                        <a href="projects.html">Mijn Projecten</a>
+                    </button>
+                    <button class="">
+                        <a href="knowledge.html">Mijn Vaardigheden</a>
+                    </button>
+                </div>
+            </details>
+
+        </div>
+    </header>
+
+
+
     <div>
         <section class="skills-section">
         <h1 class="skills-title">Mijn hobbies</h1>
