--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </header>
 
-
+    <div class="main-container-home">
     <div class="aboutMe-container">
         <h1>Jamie van der Maat</h1>
         <img src="img/profiel.jpg" alt="Profile picture">
@@ -62,6 +62,11 @@
             Op dit moment zit ik in mijn laatste jaar van een 3-jarige opleiding op MBO niveau 4.
         </p>
     </div>
+    </div>
+
+    <footer>
+        <p>© 2025 Jamie van der Maat</p>
+    </footer>
 </body>
 
 </html>
