--- a/knowledge.html
+++ b/knowledge.html
@@ -48,7 +48,7 @@
     </header>   
        
 
-
+<div class="main-container-knowledge">
         <section class="skills-section">
         <h1 class="skills-title">Mijn vaardigheden</h1>
         <ul class="skills-list">
@@ -61,5 +61,9 @@
             <li class="skill-item">Salesforce</li>
         </ul>
         </section>
+</div>
+        <footer>
+        <p>© 2025 Jamie van der Maat</p>
+    </footer>
     </body>
 </html>
