adjusted my hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -58,13 +58,13 @@
     <li>
         <details class="skill-item">
             <summary>Jongleren</summary>
-            <p class="skill-info">Ik jongleer elke week, ik kan jongleren met 3 kegels en met 3 ballen.</p>
+            <p class="skill-info">Ik jongleer elke week. Ik kan jongleren met 3 kegels en met 3 ballen. Ik doe nog meer circus dingen, maar dit is de meest bekende.</p>
         </details>
     </li>
     <li>
         <details class="skill-item">
             <summary>Eenwieleren</summary>
-            <p class="skill-info">Ik vind het ooit leuk om door het bos te eenwieleren.</p>
+            <p class="skill-info">Ik heb 3 eenwielers, waarvan 1 een mountenbike eenwieler is. En ik vind het leuk om door het bos te eenwieleren. Op de middelbare school ben ik ook wel eens op de eenwieler naar school gefietst.</p>
         </details>
     </li>
     <li>
@@ -76,25 +76,25 @@
     <li>
         <details class="skill-item">
             <summary>Turnen</summary>
-            <p class="skill-info">Ik turn elke week, ook geef ik elke week les.</p>
+            <p class="skill-info">Ik turn al sinds ik 3.5 jaar ben. Ook geef ik elke week les.</p>
         </details>
     </li>
     <li>
         <details class="skill-item">
             <summary>3D-printen</summary>
-            <p class="skill-info">Ik maak ooit leuke dingen met mijn 3D-Printer, ik kan het zelf ontwerpen maar ik haal het ook ooit van het internet af.</p>
+            <p class="skill-info">Ik maak leuke dingen met mijn 3D-Printer. Ik kan het zelf ontwerpen, maar ik haal het ook ooit van het internet af.</p>
         </details>
     </li>
     <li>
         <details class="skill-item">
             <summary>Haken</summary>
-            <p class="skill-info">Ik haak ooit leuke knuffels.</p>
+            <p class="skill-info">Ik kan leuke knuffels haken, ook zonder patronen.</p>
         </details>
     </li>
     <li>
         <details class="skill-item">
             <summary>Verven</summary>
-            <p class="skill-info">Ik vind het ooit leuk om iets te verven of the tekenen.</p>
+            <p class="skill-info">Ik vind het leuk om iets te verven of te tekenen.</p>
         </details>
     </li>
 </ul>
