--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <p>
             Hallo, ik ben Jamie van der Maat.
             <br>
-            Ik ben 18 jaar en ik ben een student Software Developer op het Ter AA Helmond in Nederland.
+            Ik ben 18 jaar en ik ben een student Software Developer op het Ter AA Helmond.
             <br>
-            Op dit moment zit ik in mijn laatste jaar van een 3-jarige opleiding op MBO niveau 4.
+            Op dit moment zit ik in mijn laatste jaar van deze 3-jarige opleiding op MBO niveau 4.
         </p>
     </div>
     </div>
