--- a/knowledge.html
+++ b/knowledge.html
@@ -53,6 +53,7 @@
         <h1 class="skills-title">Mijn vaardigheden</h1>
         <ul class="skills-list">
             <li class="skill-item">Vloeiend Engels en Nederlands</li>
+            <li class="skill-item">Basis beheersing van Duits</li>
             <li class="skill-item">Microsoft Word, Excel, Outlook en PowerPoint</li>
             <li class="skill-item">HTML, CSS, PHP, JavaScript, C#, C++, Python, SQL en Laravel</li>
             <li class="skill-item">GitHub</li>
